# market-scanner

./: .env.example  .gitignore  Dockerfile  LOGGING_IMPROVEMENTS_SUMMARY.md  LOGGING_QUICK_REFERENCE.md  LOGGING_SUPPRESSION_SUMMARY.md  Makefile  README.md  README_LOGGING_CHANGES.md  ZERO_FALLBACK_IMPLEMENTATION_SUMMARY.md  ZERO_FALLBACK_QUICK_REFERENCE.md  _tmp_bytes.py  _tmp_section.py  _tmp_ws.py  ai_engine.py  alembic.ini  close_ports.py  collect_once.py  docker-compose.yml  enviornment.yml  live_data_engine.py  nexus_ai_app.py  nexus_live_app.py  pyproject.toml  requirements.txt  run_nexus.py  start_nexus.bat  start_nexus.py
alembic/: env.py
apps/: nexus_production_refactored.py
docs/: LOGGING_CONFIGURATION.md  scoring.md
scripts/: test_data_integrity.py  test_logging_config.py  test_logging_improvements.py
src/: __init__.py  app.py  config.py  db.py  observability.py  security.py
tests/: README_TRADING_TESTS.md  final_test.py  nexus_live_simple.py  run_trading_tests.py  simple_app.py  simple_test.py  start_nexus_final.py  test.py  test_alerts.py  test_app.py  test_backtesting_engine.py  test_backtesting_router.py  test_bars.py  test_control_router.py  test_e2e.py  test_execution.py  test_feeds.py  test_live_data.py  test_live_simple.py  test_manip.py  test_metrics.py  test_microstructure.py  test_momentum.py  test_runner.py  test_runtime.py  test_scoring.py  test_server.py  test_settings_routes.py  test_settings_store_upsert.py  test_streaming.py  test_symbol_inspect.py  test_trading_config.py  test_trading_engine.py  test_trading_integration.py  (+1 more)
(+72 files in other folders)
