[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-scanner"
version = "0.1.0"
description = "Portfolio-grade Market Scanner microservice (FastAPI + async scanning)"
requires-python = ">=3.10"
readme = "README.md"

[[project.authors]]
name = "Epinnox"
email = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]