[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-alpha"
version = "1.0.0"
description = "Nexus Alpha - The Intelligent Trading Ecosystem"
requires-python = ">=3.10"
readme = "README.md"

[[project.authors]]
name = "Epinnox"
email = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]